[package]
name = "api-server"
version = "0.1.0"
authors = ["Sergey Tsaplin <me@sergeytsaplin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.7"
clap = "2.32"
env_logger = "0.8"
log = "0.4"
diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
wot-replays = { git = "https://github.com/SergeyTsaplin/wot-replays-rs", branch = "main"}